Att com msg de pedido enviado

--- a/src/app/conta_usuario/perfil-user/perfil-user.component.html
+++ b/src/app/conta_usuario/perfil-user/perfil-user.component.html
@@ -77,7 +77,7 @@
         </mat-nav-list>
     </mat-sidenav>
     <mat-sidenav-content>
-        <mat-toolbar class="toolb" style="    background: #E11212; color: white;">
+        <mat-toolbar class="toolb">
             <span> {{ tittle }} </span>
             <button type="button" aria-label="Toggle menu" mat-icon-button (click)="drawer.toggle()" *ngIf="isHandset$ | async">
         <mat-icon aria-label="Menu">menu</mat-icon>
