--- a/src/app/inicio/bag/bag.component.html
+++ b/src/app/inicio/bag/bag.component.html
@@ -73,7 +73,7 @@
 
             <div class="cupom-01">
                 <div class="cupom-02">Cupom</div>
-                <div class="cupom-03">Seleionar cupom</div>
+                <div class="cupom-03">Selecionar cupom</div>
             </div>
 
         </div>
@@ -109,11 +109,11 @@
 </div>
 
 <div class="col-sm-12 abto">
-    <button *ngIf="showBtF" class="btbag" mat-flat-button color="warn" (click)="onClickBtCar()">Escolher forma de
+    <button *ngIf="showBtF" class="btbag" mat-flat-button color="warn" style="background-color: black;" (click)="onClickBtCar()">Escolher forma de
         pagamento</button>
 
 
-    <button class="btmobile" mat-flat-button color="warn" (click)="onClickBtCar()">Escolher forma de
+    <button class="btmobile" mat-flat-button color="warn" style="background-color: black;" (click)="onClickBtCar()">Escolher forma de
           pagamento
         </button>
 </div>
