--- a/src/app/payment-steps/cupons-list/cupons-list.component.html
+++ b/src/app/payment-steps/cupons-list/cupons-list.component.html
@@ -4,7 +4,7 @@
 
 
         <button mat-icon-button color="warn" (click)="bsgServ.showCupom(false)">
-    <mat-icon>keyboard_arrow_left</mat-icon> CUPONS
+    <mat-icon>keyboard_arrow_left</mat-icon> Voltar
   </button>
 
     </div>
