--- a/src/app/conta_usuario/perfil-user/perfil-user.component.css
+++ b/src/app/conta_usuario/perfil-user/perfil-user.component.css
@@ -48,13 +48,14 @@
 }
 
 .ttool {
-    color: #3F51B5;
+    color: black;
     font-size: 14px;
     padding-top: 2px;
     padding-bottom: 0;
     margin: 0;
     height: 40px;
     font-weight: 400;
+    background: var(--primaryColor);
 }
 
 .logoEmpresa {
