--- a/src/app/inicio/item-details/item-details.component.html
+++ b/src/app/inicio/item-details/item-details.component.html
@@ -128,7 +128,7 @@
                     </div>
 
 
-                    <button class="btaddcCell" mat-raised-button color="primary" (click)="onclickAddCar(observacaoUsuario.value)">
+                    <button style="background-color: black;" class="btaddcCell" mat-raised-button color="primary" (click)="onclickAddCar(observacaoUsuario.value)">
             <mat-icon>add_shopping_cart</mat-icon> {{ itemCatalogo.total | currency:'BRL' }} Adicionar
           </button>
                 </div>
