--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,7 @@
 
 ::root {
     --first: #673ab7;
+    --primaryColor: #000000;
 }
 
 html,
@@ -15,6 +16,10 @@ body {
     /*font-family: 'Dancing Script', cursive;*/
     /*font-family: 'Open Sans Condensed', sans-serif;*/
     font-family: SulSans, Helvetica, sans-serif;
+}
+
+.buttonStyle {
+  background-color: var(--primaryColor);
 }
 
 input {
