Hotjar Tracking Code for

--- a/src/app/inicio/itens-merchant/itens-merchant.component.html
+++ b/src/app/inicio/itens-merchant/itens-merchant.component.html
@@ -82,7 +82,7 @@
             </button>
 
           </div>
-          <div style="text-align: initial;"> {{service.getDadosEmpresa().nome}} </div>
+          <div> {{service.getDadosEmpresa().nome}} </div>
           <div>
 
             <button [class.stylePreco]="bagServ.getTotalCarrinho() > 0" class="icdelscs" mat-icon-button
