--- a/src/app/conta_usuario/avals/avals.component.html
+++ b/src/app/conta_usuario/avals/avals.component.html
@@ -1,4 +1,4 @@
-<div class="avi" *ngIf="itens.length === 0">
+<div class="avi" *ngIf="itens.length == 0">
     Você ainda não fez nenhuma avaliação
 </div>
 
