--- a/src/app/inicio/bag/bag.component.html
+++ b/src/app/inicio/bag/bag.component.html
@@ -14,8 +14,8 @@
     color: #61615f;
     padding-top: 75px;">
         <div class="img_bag" [lazyLoad]="'./assets/images/others/bag3.png'"></div>
-        <!--<div class="c1">Seu carrinho está vazio </div>
-        <div>Adicione itens</div>-->
+        <div class="c1">Seu carrinho está vazio </div>
+        <div>Adicione itens</div>
     </div>
 
     <div *ngIf="servbag.getQntItensCar() > 0" class="col-sm-12 inbag">
