--- a/src/app/conta_usuario/cupons/cupons.component.html
+++ b/src/app/conta_usuario/cupons/cupons.component.html
@@ -1,7 +1,7 @@
 <div class="col-sm-12">
 
     <div class="row">
-        <div class="col-sm-12" style=" justify-content: center;" *ngIf="itens.length === 0">
+        <div class="col-sm-12" style=" justify-content: center;" *ngIf="itens.length == 0">
             <div style="margin-top: 17px;  justify-content: center;">
                 <span *ngIf="itens.length === 0">
           <div class="col-sm-12 av">
